--- a/_posts/2020-02-05-solar03.markdown
+++ b/_posts/2020-02-05-solar03.markdown
@@ -1,12 +1,10 @@
 ---
-title: Solar Rogue
+title: Killing Time 3
 layout: default
-modal-id: SolarRogue
+modal-id: solar03
 date: 2019-01-25
 img: solar03.png
-alt: Sample Image for Solar Rogue
-project-date: January 2019
-description: <p>Working on the production of a RogueLike Space Opera with a nethack feel but for modern generation. Sci-fi ships flying through empty space in solar systems randomly generated and full of ennemy ships, planets, suns, space stations, etc. </p><p>Made using <a href="https://godotengine.org/">Godot Engine</a>, Check out the source on <a href="https://github.com/Ombarus/SolarRogue">Github</a></p>
-privacyurl: privacydicedm
+alt: The ennemy Scout is shooting our Frigate
+description: <p>The ennemy Scout is shooting our Frigate!</p>
 
 ---
