replaced super-heavy pngs by jpg for web friendlyness

--- a/_posts/2014-07-18-dicedm.markdown
+++ b/_posts/2014-07-18-dicedm.markdown
@@ -3,7 +3,7 @@ title: Killing Time 1
 layout: default
 modal-id: solar01
 date: 2018-10-31
-img: solar01.png
+img: solar01.jpg
 alt: The ennemy Scout is shooting our Frigate
 description: <p>The ennemy Scout is shooting our Frigate!</p>
 
