--- a/_posts/2020-03-23-inv.markdown
+++ b/_posts/2020-03-23-inv.markdown
@@ -3,7 +3,7 @@ title: Inventory
 layout: default
 modal-id: solar05
 date: 2020-03-23
-img: gameplay01_1.1.6.png
+img: gameplay01_1.1.6.jpg
 alt: Browsing the ship's cargo holds
 description: <p>Equip your ship with the latest technologies!</p>
 
