--- a/_posts/2020-03-23-looting.markdown
+++ b/_posts/2020-03-23-looting.markdown
@@ -3,7 +3,7 @@ title: Looting
 layout: default
 modal-id: solar06
 date: 2020-03-23
-img: gameplay01_1.1.3.png
+img: gameplay01_1.1.3.jpg
 alt: We found a derelic
 description: <p>One man trash is another's treasure!</p>
 
