--- a/_posts/2020-03-23-space.markdown
+++ b/_posts/2020-03-23-space.markdown
@@ -3,7 +3,7 @@ title: Space Exploration
 layout: default
 modal-id: space1
 date: 2020-03-23
-img: gameplay01_1.1.7.png
+img: gameplay01_1.1.7.jpg
 alt: New procedurally generated solar system each game
 description: <p>Explore the vast universe!</p>
 
