Update screenshots and added new ones

--- a/_posts/2014-07-18-dicedm.markdown
+++ b/_posts/2014-07-18-dicedm.markdown
@@ -3,8 +3,8 @@ title: Killing Time 1
 layout: default
 modal-id: solar01
 date: 2018-10-31
-img: solar01.jpg
-alt: The ennemy Scout is shooting our Frigate
-description: <p>The ennemy Scout is shooting our Frigate!</p>
+img: ingame_1.2.7.jpg
+alt: Enemy Alien Scout shooting our Ship
+description: <p>Enemy Alien Scout shooting our Ship!</p>
 
 ---
