--- a/_posts/2020-03-23-farming.markdown
+++ b/_posts/2020-03-23-farming.markdown
@@ -1,10 +1,10 @@
 ---
-title: Harvesting Planets
+title: Shooting Missiles
 layout: default
 modal-id: solar04
 date: 2020-03-23
-img: gameplay01_1.1.5.jpg
-alt: Shoot planet and asteroid to harvest their minerals
-description: <p>Shoot planet and asteroid to harvest their minerals</p>
+img: ingame_1.1.3.jpg
+alt: Wide range of tactical weapons
+description: <p>Wide range of tactical weapons</p>
 
 ---
