--- a/_posts/2020-03-23-looting.markdown
+++ b/_posts/2020-03-23-looting.markdown
@@ -1,10 +1,10 @@
 ---
-title: Looting
+title: Unique Weapons
 layout: default
 modal-id: solar06
 date: 2020-03-23
-img: gameplay01_1.1.3.jpg
-alt: We found a derelic
-description: <p>One man trash is another's treasure!</p>
+img: ingame_1.1.12.jpg
+alt: Shooting unique weapons
+description: <p>Powerful tactical weapons!</p>
 
 ---
